Segmentation now done, can make multiple measurements (e.g., mean, median). Sketch of analysis notebook.

--- a/paulssonlab/src/paulssonlab/shenker/molecule-counting/190304 Segmentation.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/molecule-counting/190304 Segmentation.ipynb
@@ -22,11 +22,12 @@
     "import distributed\n",
     "from distributed import Client, LocalCluster, progress\n",
     "from dask_jobqueue import SLURMCluster\n",
-    "from cytoolz import sliding_window, juxt, concat, partial\n",
+    "from cytoolz import partial, compose\n",
     "from itertools import repeat\n",
     "from glob import glob\n",
     "from functools import lru_cache\n",
     "import numpy_indexed\n",
+    "import pickle\n",
     "import warnings"
    ]
   },
@@ -37,112 +38,6 @@
    "outputs": [],
    "source": [
     "hv.extension(\"bokeh\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cluster = SLURMCluster(\n",
-    "    queue=\"short\",\n",
-    "    walltime=\"00:30:00\",\n",
-    "    memory=\"8GB\",\n",
-    "    local_directory=\"/tmp\",\n",
-    "    log_directory=\"/home/jqs1/projects/molecule-counting/log\",\n",
-    "    cores=1,\n",
-    "    processes=1,\n",
-    ")\n",
-    "# diagnostics_port=('127.0.0.1', 8787),\n",
-    "# env_extra=['export PYTHONPATH=\\\"/home/jqs1/projects/matriarch\\\"'])\n",
-    "client = Client(cluster)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "client"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cluster"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cluster.adapt(minimum=0, maximum=200)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cluster.scale(100)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# get_nd2_reader = lru_cache()(ND2Reader)\n",
-    "get_nd2_reader = ND2Reader\n",
-    "\n",
-    "\n",
-    "def get_nd2_frame(filename, t):\n",
-    "    return get_nd2_reader(filename).get_frame_2D(t=t)\n",
-    "\n",
-    "\n",
-    "def nd2_to_dask_array(filename):\n",
-    "    nd2 = get_nd2_reader(filename)\n",
-    "    frames = [\n",
-    "        dask.delayed(get_nd2_frame, pure=True)(filename, t)\n",
-    "        for t in range(nd2.sizes[\"t\"])\n",
-    "    ]\n",
-    "    arrays = [\n",
-    "        da.from_delayed(frame, dtype=nd2.pixel_type, shape=nd2.frame_shape)\n",
-    "        for frame in frames\n",
-    "    ]\n",
-    "    stack = da.stack(arrays, axis=0)\n",
-    "    return stack\n",
-    "\n",
-    "\n",
-    "def nd2_to_futures(filename):\n",
-    "    nd2 = get_nd2_reader(filename)\n",
-    "    frames = [client.submit(get_nd2_frame, filename, t) for t in range(nd2.sizes[\"t\"])]\n",
-    "    return frames\n",
-    "\n",
-    "\n",
-    "def process_file(frames, lag=1):\n",
-    "    funcs = juxt(lambda x: sharpness(x[-1]), rms_diff, rms_diff_normed, shift)\n",
-    "    # funcs = juxt(lambda x: sharpness(x[-1]), rms_diff, rms_diff_normed)\n",
-    "    # funcs = rms_diff\n",
-    "    # funcs = partial(client.submit, funcs)\n",
-    "    lagged_frames = list(sliding_window(lag + 1, concat((repeat(np.nan, lag), frames))))\n",
-    "    return client.map(funcs, lagged_frames)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Prototyping"
    ]
   },
   {
@@ -176,16 +71,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nd2 = ND2Reader(filenames[15])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "img = nd2.get_frame_2D(t=0)"
+    "DEFAULT_REGIONPROPS = [\n",
+    "    \"area\",\n",
+    "    \"centroid\",\n",
+    "    \"eccentricity\",\n",
+    "    \"min_intensity\",\n",
+    "    \"mean_intensity\",\n",
+    "    \"max_intensity\",\n",
+    "    \"major_axis_length\",\n",
+    "    \"minor_axis_length\",\n",
+    "    \"orientation\",\n",
+    "    \"perimeter\",\n",
+    "    \"solidity\",\n",
+    "    \"weighted_centroid\",\n",
+    "]\n",
+    "\n",
+    "\n",
+    "def get_regionprops(label_image, intensity_image, properties=DEFAULT_REGIONPROPS):\n",
+    "    rps = skimage.measure.regionprops(\n",
+    "        label_image, intensity_image, coordinates=\"rc\", cache=False\n",
+    "    )\n",
+    "    if not len(rps):\n",
+    "        return None\n",
+    "    cols = {prop: [getattr(rp, prop) for rp in rps] for prop in properties}\n",
+    "    for col, values in list(cols.items()):\n",
+    "        if isinstance(values[0], tuple):\n",
+    "            del cols[col]\n",
+    "            # TODO: store coordinates as multiindex?\n",
+    "            cols[col + \"_x\"] = [v[0] for v in values]\n",
+    "            cols[col + \"_y\"] = [v[1] for v in values]\n",
+    "    df = pd.DataFrame(cols, index=range(1, len(rps) + 1))\n",
+    "    df.index.name = \"label\"\n",
+    "    return df"
    ]
   },
   {
@@ -208,43 +125,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%time\n",
-    "labels = segment(img)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "regionprops = skimage.measure.regionprops(labels, img)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = (\n",
-    "    pd.DataFrame({\"label\": labels.ravel(), \"value\": img.ravel()})\n",
-    "    .groupby(\"label\")\n",
-    "    .agg([\"mean\", \"min\", \"max\"])\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# def map_over_labels(label_image, intensity_image, func):\n",
-    "#     labels = range(0, np.max(np.asarray(label_image))+1)\n",
-    "#     return np.array([func(intensity_image[label_image == label]) for label in labels])\n",
+    "# get_nd2_reader = lru_cache()(ND2Reader)\n",
+    "get_nd2_reader = ND2Reader\n",
     "\n",
-    "# pd.DataFrame({'label': labels.ravel(), 'value': img.ravel()}).groupby('label').agg(['median'])\n",
+    "\n",
+    "def get_nd2_frame(filename, t):\n",
+    "    return get_nd2_reader(filename).get_frame_2D(t=t)\n",
+    "\n",
+    "\n",
+    "def nd2_to_futures(client, filename):\n",
+    "    nd2 = get_nd2_reader(filename)\n",
+    "    frames = [client.submit(get_nd2_frame, filename, t) for t in range(nd2.sizes[\"t\"])]\n",
+    "    return frames\n",
     "\n",
     "\n",
     "def map_over_labels(label_image, intensity_image, func):\n",
@@ -252,7 +144,100 @@
     "    groups = numpy_indexed.group_by(\n",
     "        label_image.ravel(), intensity_image.ravel(), reduction=func\n",
     "    )\n",
-    "    return [g[1] for g in groups]"
+    "    return [g[1] for g in groups]\n",
+    "\n",
+    "\n",
+    "def process_file(client, filename, col_to_funcs):\n",
+    "    frames = nd2_to_futures(client, filename)\n",
+    "    labels = client.submit(segment, frames[0])\n",
+    "    regionprops = client.submit(get_regionprops, labels, frames[0])\n",
+    "    traces = {\n",
+    "        col: client.submit(\n",
+    "            np.transpose,\n",
+    "            [client.submit(map_over_labels, labels, frame, func) for frame in frames],\n",
+    "        )\n",
+    "        for col, func in col_to_funcs.items()\n",
+    "    }\n",
+    "    return traces, regionprops, labels, frames[0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Run"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cluster = SLURMCluster(\n",
+    "    queue=\"short\",\n",
+    "    walltime=\"02:00:00\",\n",
+    "    memory=\"8GB\",\n",
+    "    local_directory=\"/tmp\",\n",
+    "    log_directory=\"/home/jqs1/projects/molecule-counting/log\",\n",
+    "    cores=1,\n",
+    "    processes=1,\n",
+    ")\n",
+    "# diagnostics_port=('127.0.0.1', 8787),\n",
+    "# env_extra=['export PYTHONPATH=\\\"/home/jqs1/projects/matriarch\\\"'])\n",
+    "client = Client(cluster)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cluster"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filenames = glob(\"/n/scratch2/jqs1/fidelity/190301/jqs_photobleach*.nd2\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "funcs = {\n",
+    "    \"mean\": np.mean,\n",
+    "    \"median\": np.median,\n",
+    "    \"p0.05\": partial(np.percentile, q=5),\n",
+    "    \"p0.20\": partial(np.percentile, q=20),\n",
+    "    \"p0.70\": partial(np.percentile, q=70),\n",
+    "    \"p0.95\": partial(np.percentile, q=95),\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = process_file(client, filenames[0], funcs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "progress(a)"
    ]
   },
   {
@@ -262,7 +247,7 @@
    "outputs": [],
    "source": [
     "%%time\n",
-    "frames = [nd2.get_frame_2D(t=t) for t in range(nd2.sizes[\"t\"])]"
+    "data = {filename: process_file(client, filename, funcs) for filename in filenames}"
    ]
   },
   {
@@ -272,7 +257,7 @@
    "outputs": [],
    "source": [
     "%%time\n",
-    "traces = np.array([map_over_labels(labels, frame, np.median) for frame in frames]).T"
+    "trace_res = client.gather(data)"
    ]
   },
   {
@@ -281,7 +266,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "traces.shape"
+    "with open(\"all_data.pickle\", \"wb\") as f:\n",
+    "    pickle.dump(trace_res, f)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Plotting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list(trace_res.keys())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "traces = b[0][\"p0.95\"]"
    ]
   },
   {
@@ -335,61 +346,6 @@
    "source": [
     "%%output size=250\n",
     "hv.Image(img) + hv.Image(segment(img))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Run"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "client"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "filenames = glob(\"/n/scratch2/jqs1/fidelity/190301/jqs_photobleach*.nd2\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "filenames"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "data = {filename: process_file(nd2_to_futures(filename)) for filename in filenames}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "res = client.gather(data)\n",
-    "res = {filename: np.array(d).T for filename, d in res.items()}"
    ]
   }
  ],
