Update 190305 Analysis NAO.ipynb

--- a/paulssonlab/src/paulssonlab/shenker/molecule-counting/190305 Analysis NAO.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/molecule-counting/190305 Analysis NAO.ipynb
@@ -55,7 +55,7 @@
    "outputs": [],
    "source": [
     "measurements, regionprops, labels, img = d[\n",
-    "    \"/n/scratch2/jqs1/fidelity/190301/jqs_photobleach_100ms_de32_mkate2_0003.nd2\"\n",
+    "    \"/n/scratch2/jqs1/fidelity/190301/jqs_photobleach_100ms_de32_mkate2_0000.nd2\"\n",
     "]"
    ]
   },
@@ -133,16 +133,18 @@
     "import pylab as plt\n",
     "import pandas as pd\n",
     "import numpy as np\n",
+    "from matplotlib import cm\n",
     "from scipy.integrate import simps\n",
     "\n",
     "# G = 10\n",
     "df = pd.DataFrame(traces[:, 0:2000])  # + np.random.normal(0,1,Gsamp.T.shape))\n",
-    "bins = np.arange(df[0].min() - 1, df[0].max() + 1, 100)\n",
+    "df = df[df[0] > 1000]\n",
+    "bins = np.arange(df[0].min() - 1, df[0].max() + 1, 150)\n",
     "df[\"bin\"] = pd.cut(df[0], bins=bins)\n",
     "p = df.apply(lambda x: x[:-1:] / x[0], axis=1)\n",
     "p[\"bin\"] = df[\"bin\"]\n",
     "\n",
-    "tau = 35\n",
+    "tau = 30\n",
     "pbar = p.groupby(p[\"bin\"]).mean()[df.groupby(df[\"bin\"]).size() > tau]\n",
     "mu = df.groupby(df[\"bin\"]).mean()[df.groupby(df[\"bin\"]).size() > tau]\n",
     "sigma2 = df.groupby(df[\"bin\"]).var(ddof=0)[df.groupby(df[\"bin\"]).size() > tau]\n",
@@ -155,7 +157,7 @@
     "linfit_fn = np.poly1d(linfit)\n",
     "\n",
     "plt.figure(figsize=(12, 8))\n",
-    "plt.scatter(x, y)\n",
+    "# plt.scatter(x,y)\n",
     "\n",
     "xfit = np.linspace(0, 0.25, 100)\n",
     "nu_bar = np.round(np.mean(r[np.isfinite(r)]), 2)\n",
@@ -174,10 +176,20 @@
     "print(\"median ratio: \", np.median(r[np.isfinite(r)]))\n",
     "\n",
     "nu_int = []\n",
+    "\n",
+    "cmap = cm.get_cmap(\"coolwarm\")\n",
+    "imax = x.index[-1].left\n",
+    "imin = x.index[0].left\n",
     "for name, group in x.groupby(\"bin\"):\n",
-    "    nu_int.append(6 * simps(y.loc[name].values, 1 - x.loc[name].values))\n",
-    "    #     print(6*simps(y.loc[name].values,1-x.loc[name].values))\n",
-    "    plt.scatter(x.loc[name].values, y.loc[name].values)\n",
+    "    nu_int.append(-6 * simps(y.loc[name].values, x.loc[name].values))\n",
+    "    dp = x.loc[name].values\n",
+    "    dp = dp[x.loc[name].values < 1 / 2]\n",
+    "    f = y.loc[name].values[x.loc[name].values < 1 / 2]\n",
+    "    #     nu_int.append(-12*simps(f,dp))\n",
+    "    c = (name.left - imin) / (imax - imin)\n",
+    "\n",
+    "    plt.scatter(1 - x.loc[name].values, y.loc[name].values, color=cmap(c), label=name)\n",
+    "    plt.legend()\n",
     "print(nu_int, np.mean(nu_int))\n",
     "plt.title(\n",
     "    r\"$\\nu = 6\\int\\frac{\\hat{\\sigma}^2}{f_{max}}dp$ =\" + str(np.mean(nu_int)),\n",
@@ -196,13 +208,6 @@
     "plt.hist(I0, bins=30)\n",
     "print(np.mean(I0), np.var(I0))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
