--- a/paulssonlab/src/paulssonlab/eaton/trenchripper/Interactive_Kymograph.ipynb
+++ b/paulssonlab/src/paulssonlab/eaton/trenchripper/Interactive_Kymograph.ipynb
@@ -84,92 +84,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for i in range(0, 4):\n",
-    "    print(2**i)\n",
-    "    with h5py.File(\"/n/scratch2/de64/test_\" + str(i) + \".hdf5\", \"a\") as outfile:\n",
-    "        outfile.create_dataset(\n",
-    "            \"data\", (2048, 2048, 300), chunks=(256, 256, 2**i), dtype=\"uint16\"\n",
-    "        )\n",
-    "        for j in range(3):\n",
-    "            array = np.ones((2048, 2048, 100), dtype=\"uint16\")\n",
-    "            outfile[\"data\"][:, :, (100 * j) : (100 * j) + 100] = array\n",
-    "    infile = h5py.File(\"/n/scratch2/de64/test_\" + str(i) + \".hdf5\", \"r\")\n",
-    "    dataset = infile[\"data\"]\n",
-    "    t1 = time.time()\n",
-    "    testarr = dataset[:, :, 0:300:100]\n",
-    "    t2 = time.time()\n",
-    "    print(t2 - t1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "infile = h5py.File(\"/n/scratch2/de64/test_7.hdf5\", \"r\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "2048 / 4"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dataset = infile[\"data\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dataset.chunks"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dataset.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "testarr = dataset[:, :, 0:700:100]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "testarr.nbytes"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -192,6 +106,8 @@
     "\n",
     "**t_subsample_step (int)** : Step size to be used for subsampling input files in time, recommend that subsampling results in between 5 and 20 timepoints for quick processing.\n",
     "\n",
+    "**t_range (tuple of ints)** : Range size to be used for subsampling input files in time.\n",
+    "\n",
     "The last line will perform import and subsampling of the input hdf5 image files."
    ]
   },
@@ -204,9 +120,13 @@
     "# input_path_prefix = '/n/groups/paulsson/Daniel/Image_analysis_pipeline/tiff_extraction/test_out_4/fov_'\n",
     "# kymo = tr.interactive.kymograph_interactive(input_path_prefix,[\"channel_BF\",\"channel_RFP\"],[64,12,32,45],t_subsample_step=5)\n",
     "# imported_array_list = kymo.map_to_fovs(kymo.import_hdf5)\n",
-    "input_path_prefix = \"/n/scratch2/de64/full_pipeline_test/hdf5/fov_\"\n",
+    "input_path_prefix = \"/n/scratch2/de64/for_sylvia/timelapse/hdf5/fov_\"\n",
     "kymo = tr.interactive.kymograph_interactive(\n",
-    "    input_path_prefix, [\"channel_BF\"], [1, 2, 3, 4], t_subsample_step=200\n",
+    "    input_path_prefix,\n",
+    "    [\"channel_Phase\"],\n",
+    "    [16, 70],\n",
+    "    t_subsample_step=20,\n",
+    "    t_range=(0, 100),\n",
     ")\n",
     "imported_array_list = kymo.map_to_fovs(kymo.import_hdf5)"
    ]
@@ -269,8 +189,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_percentile = 85\n",
-    "smoothing_kernel_y_dim_0 = 9\n",
+    "y_percentile = 90\n",
+    "smoothing_kernel_y_dim_0 = 17\n",
     "\n",
     "y_percentiles_smoothed_list = kymo.map_to_fovs(\n",
     "    kymo.get_smoothed_y_percentiles,\n",
@@ -348,10 +268,10 @@
    "outputs": [],
    "source": [
     "triangle_nbins = 50\n",
-    "triangle_scaling = 1.3\n",
+    "triangle_scaling = 1.2\n",
     "y_min_edge_dist = 50\n",
-    "padding_y = 40\n",
-    "trench_len_y = 130\n",
+    "padding_y = 50\n",
+    "trench_len_y = 110\n",
     "top_orientation = 0\n",
     "\n",
     "trench_edges_y_lists = kymo.map_to_fovs(\n",
@@ -507,7 +427,7 @@
    "outputs": [],
    "source": [
     "otsu_nbins = 50\n",
-    "otsu_scaling = 1.0\n",
+    "otsu_scaling = 0.7\n",
     "\n",
     "\n",
     "all_midpoints_list = kymo.map_to_fovs(\n",
