Fixed an issue in the kymograph code where I called in an entire color channel on importing the file. Involved eliminating the initial import and just directly calling the input file throughout the code.

--- a/paulssonlab/src/paulssonlab/deaton/trenchripper/Cluster_Notebook.ipynb
+++ b/paulssonlab/src/paulssonlab/deaton/trenchripper/Cluster_Notebook.ipynb
@@ -59,9 +59,10 @@
    "outputs": [],
    "source": [
     "hdf5_extractor = tr.ndextract.hdf5_fov_extractor(\n",
-    "    \"/n/scratch2/de64/for_sylvia/Bacillus_revival_12_7_2020.nd2\",\n",
-    "    \"/n/scratch2/de64/full_pipeline_test/hdf5\",\n",
-    ")"
+    "    \"/n/scratch2/de64/for_sylvia/2019-02-08_bacillus_bDE6_bDE7_bDE8_timelapse.nd2\",\n",
+    "    \"/n/scratch2/de64/for_sylvia/timelapse/hdf5\",\n",
+    "    num_cols=40,\n",
+    ")  ##find a more elegent way to do grids...."
    ]
   },
   {
@@ -70,7 +71,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "kymo_controller.mapfovs(hdf5_extractor.extract_fov, 40)"
+    "hdf5_extractor.writemetadata()"
    ]
   },
   {
@@ -79,9 +80,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "props = kymo_controller.daskclient.gather(\n",
-    "    kymo_controller.futures\n",
-    ")  # this will hang until all futures are done"
+    "fov_list = list(range(hdf5_extractor.num_fovs))\n",
+    "# fov_list = list(range(16)) + list(range(29,40))"
    ]
   },
   {
@@ -90,8 +90,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import h5py\n",
-    "import numpy as np"
+    "kymo_controller.mapfovs(hdf5_extractor.extract_fov, fov_list)"
    ]
   },
   {
@@ -100,7 +99,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = h5py.File(\"/n/scratch2/de64/full_pipeline_test/hdf5/fov_1.hdf5\", \"r\")"
+    "# props = kymo_controller.daskclient.gather(kymo_controller.futures) #this will hang until all futures are done"
    ]
   },
   {
@@ -109,123 +108,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(list(data.keys()))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data[\"channel_BF\"].shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data[\"channel_BF\"].chunks"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "indices = np.array(list(range(0, 1441, 200)))\n",
-    "# array = np.take(data['channel_BF'], indices, axis=2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "indices"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data[\"channel_BF\"][:, :, [200, 400]].shape  # takes waaay too long, what the heck..."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data[\"channel_BF\"][:, :, [200, 400]].shape  # takes waaay too long, what the heck..."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Generate Kymographs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "input_file_prefix = (\n",
-    "    \"/n/groups/paulsson/Daniel/Image_analysis_pipeline/tiff_extraction/test_out_4/fov_\"\n",
-    ")\n",
-    "output_path = \"/n/groups/paulsson/Daniel/Image_analysis_pipeline/kymographs_6\"\n",
-    "all_channels = [\"channel_BF\", \"channel_RFP\"]\n",
-    "\n",
-    "kymo = tr.kymograph.kychunker(\n",
-    "    input_file_prefix=input_file_prefix,\n",
-    "    output_path=output_path,\n",
-    "    all_channels=all_channels,\n",
-    "    trench_len_y=270,\n",
-    "    padding_y=20,\n",
-    "    trench_width_x=30,\n",
-    "    t_chunk=25,\n",
-    "    y_percentile=85,\n",
-    "    y_min_edge_dist=50,\n",
-    "    smoothing_kernel_y=(9, 1),\n",
-    "    triangle_nbins=50,\n",
-    "    triangle_scaling=1.0,\n",
-    "    top_orientation=0,\n",
-    "    x_percentile=85,\n",
-    "    background_kernel_x=(301, 1),\n",
-    "    smoothing_kernel_x=(9, 1),\n",
-    "    otsu_nbins=50,\n",
-    "    otsu_scaling=1.0,\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "kymo_controller.mapfovs(kymo.generate_kymograph, 30)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "props = kymo_controller.daskclient.gather(\n",
-    "    kymo_controller.futures\n",
-    ")  # this will hang until all futures are done"
+    "# hdf5_extractor.extract_fov(0)"
    ]
   },
   {
@@ -243,6 +126,547 @@
    "source": [
     "kymo_controller.shutdown()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# scancel --name=dask-worker --user=de64"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Generate Kymographs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Start Dask"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kymo_controller = tr.cluster.dask_controller(\n",
+    "    walltime=\"04:00:00\", local=False, n_workers=40, memory=\"4GB\"\n",
+    ")\n",
+    "kymo_controller.startdask()\n",
+    "kymo_controller.daskcluster.start_workers()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kymo_controller.daskclient"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_file_prefix = \"/n/scratch2/de64/for_sylvia/timelapse/hdf5/fov_\"\n",
+    "output_path = \"/n/scratch2/de64/for_sylvia/timelapse/kymo\"\n",
+    "all_channels = [\"channel_Phase\"]\n",
+    "\n",
+    "kymo = tr.kymograph.kychunker(\n",
+    "    input_file_prefix=input_file_prefix,\n",
+    "    output_path=output_path,\n",
+    "    all_channels=all_channels,\n",
+    "    trench_len_y=110,\n",
+    "    padding_y=50,\n",
+    "    trench_width_x=20,\n",
+    "    t_chunk=100,\n",
+    "    t_range=(0, 400),\n",
+    "    y_percentile=90,\n",
+    "    y_min_edge_dist=50,\n",
+    "    smoothing_kernel_y=(17, 1),\n",
+    "    triangle_nbins=50,\n",
+    "    triangle_scaling=1.2,\n",
+    "    top_orientation=0,\n",
+    "    x_percentile=85,\n",
+    "    background_kernel_x=(301, 1),\n",
+    "    smoothing_kernel_x=(9, 1),\n",
+    "    otsu_nbins=50,\n",
+    "    otsu_scaling=0.7,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hdf5_extractor.metadata[\"channels\"]  ##these names should match my convention"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fov_list = list(range(15)) + list(range(67, 80))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kymo_controller.mapfovs(kymo.generate_kymograph, fov_list)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "maybe an estimate of memory usage"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kymo.generate_kymograph(16)  ## figure out this error ##"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### NOTE\n",
+    "\n",
+    "- There is a serious memory leak in the code somewhere. It was introduced somewhat recently, as it ran well on a dataset of similar size. I suspect it was introduced when the time range option was added. Worst case I can rollback to the github version.\n",
+    "\n",
+    "- Found the issue, on import I call in the whole color channel. Need to rework to prevent this call. fixed.\n",
+    "\n",
+    "- **How to deal with some fovs having a different number of rows than other fovs??? Try to make more flexible...**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "maybe add a kymograph viewer here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Note\n",
+    "There may be an issue where hdf5 files do not close properly on crashes..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# props = kymo_controller.daskclient.gather(kymo_controller.futures) #this will hang until all futures are done"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### End Dask, Cancel Jobs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kymo_controller.shutdown()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# scancel --name=dask-worker --user=de64"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Note: access request to the transfer partition pending; automate this bit later"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import subprocess\n",
+    "\n",
+    "in_path = \"/n/files/SysBio/PAULSSON LAB/Daniel/Image_Data/test\"\n",
+    "out_path = \"/n/scratch2/de64/for_sylvia/\"\n",
+    "wrap_str = \"rsync \" + in_path + \" \" + out_path\n",
+    "cmd_str = 'sbatch -p transfer -t 0-12:00 --wrap=\"' + wrap_str + '\"'\n",
+    "\n",
+    "subprocess.check_output(cmd_str, shell=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cmd_str"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!sbatch -p transfer -t 0-12:00 --wrap=\"rsync /n/files/SysBio/PAULSSON\\LAB/Daniel/Image_Data/Bacillus_Project/test /n/scratch2/de64/for_sylvia/\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Note: need to find a way to associate lanes from init barcoding snapshot with imaging lanes\n",
+    "\n",
+    "plan:\n",
+    "- extract and segment (with phase) barcoding file\n",
+    "- extract and segment experiemnt file\n",
+    "- for both, note x positions of t=0 trenches\n",
+    "- compare these values to map trenches to eachother..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import h5py\n",
+    "from matplotlib import pyplot as plt\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.array([1, 2])[:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "h5py_handle = h5py.File(\"/n/scratch2/de64/for_sylvia/timelapse/kymo/kymo_14.hdf5\", \"r\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list(h5py_handle.keys())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bottom = h5py_handle[\"1/channel_Phase\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# top = h5py_handle[\"channel_Phase\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "top"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# plt.imshow(top[50,:,:,20])\n",
+    "tr.tplot.plot_kymograph(bottom[10, :, :, 0:50])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def test_fn():\n",
+    "    h5py_handle = h5py.File(\n",
+    "        \"/n/scratch2/de64/for_sylvia/timelapse/hdf5/fov_0.hdf5\", \"r\"\n",
+    "    )\n",
+    "    top = h5py_handle[\"channel_Phase\"]\n",
+    "    test = top[:, :, 0:50]\n",
+    "    output2 = np.percentile(test, 85, axis=1, interpolation=\"lower\")\n",
+    "    output3 = np.percentile(test, 85, axis=1, interpolation=\"higher\")\n",
+    "    output4 = np.percentile(test, 85, axis=1, interpolation=\"linear\")\n",
+    "    h5py_handle.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%load_ext line_profiler\n",
+    "%lprun -f test_fn test_fn()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "h5py_handle = h5py.File(\"/n/scratch2/de64/for_sylvia/timelapse/hdf5/fov_0.hdf5\", \"r\")\n",
+    "top = h5py_handle[\"channel_Phase\"]\n",
+    "slc = [slice(None)] * len(top.shape)\n",
+    "slc[2] = slice(0, 50)\n",
+    "print(slc)\n",
+    "test = top[tuple(slc)]\n",
+    "h5py_handle.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "h5py_handle = h5py.File(\"/n/scratch2/de64/for_sylvia/timelapse/hdf5/fov_0.hdf5\", \"r\")\n",
+    "top = h5py_handle[\"channel_Phase\"]\n",
+    "test = top[:, :, range(0, 50)]\n",
+    "h5py_handle.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "h5py_handle = h5py.File(\"/n/scratch2/de64/for_sylvia/timelapse/hdf5/fov_0.hdf5\", \"r\")\n",
+    "top = h5py_handle[\"channel_Phase\"]\n",
+    "test = top[:, :, list(range(0, 50))]\n",
+    "h5py_handle.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "h5py_handle = h5py.File(\"/n/scratch2/de64/for_sylvia/timelapse/hdf5/fov_0.hdf5\", \"r\")\n",
+    "top = h5py_handle[\"channel_Phase\"]\n",
+    "test = np.take(top, list(range(0, 50)), axis=2)\n",
+    "h5py_handle.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.take(\n",
+    "    h5py_handle[\"channel_Phase\"], [1, 2, 3, 4, 5], axis=2\n",
+    ")  ##this operation is killing me"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "h5py_handle[\"channel_Phase\"][:, :, :20].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "h5py_handle.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "h5py_handle[\"1/channel_YFP\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "h5py_handle.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "testlist = [\"success\"]\n",
+    "potato = \"fail\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def test(potato, testlist):\n",
+    "    exec(\"potato = testlist\")\n",
+    "    return potato"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test(potato, [\"moo\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "potato"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "h5py_handle = h5py.File(\"/n/scratch2/de64/for_sylvia/timelapse/hdf5/fov_0.hdf5\", \"r\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "h5py_handle[\"channel_Phase\"].chunks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "h5py_handle[\"channel_Phase\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "target[slc]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
